# sancristobal-forest-sentinel

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  INSTANCE_DEPLOYMENT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: agent-bead.yml
.github/workflows/: ci.yml  deploy.yml  scheduled-run.yml  update-instance.yml
alembic/: env.py
alembic/versions/: 0001_create_aoi_table.py  0001_initial_schema.py  0006_change_raster.py  0007_disturbance_candidate.py  0008_disturbance_event.py  0009_pipeline_run.py  0010_pipeline_run_methodology.py  0011_candidate_statistics.py  0012_methodology_display_version.py  0013_manual_review.py  0014_confidence_assessment.py  0015_sensor_source.py  0016_radar_baseline_provenance.py  0017_context_layers.py  0018_event_context.py  0019_run_aoi_geometry_hash.py  0020_raster_lineage.py  0021_settings_change.py
config/: aoi.geojson  instance.env  overrides.env
config/aois/: santa-isabel-se-tubi.geojson  solomon-islands.geojson  temotu.geojson  temotu.geojson.disabled  vangunu.geojson
docs/: architecture.md  beads.md  cloud-shell-setup.md  config-inventory.md  scaling.md  work-plan.md
examples/: aoi-sample.geojson
scripts/: bootstrap_local.sh  make_aoi.py  provision_vm.sh  prune_cogs.sh  run_assess.sh  run_pipeline.sh  serve_dashboard.sh  setup_gcp.sh  setup_wif.sh  teardown_gcp.sh  vm_setup.sh  vm_startup.sh
scripts/systemd/: forest-sentinel-assess.service  forest-sentinel-dashboard.service  forest-sentinel-pipeline.service  forest-sentinel-pipeline.timer  forest-sentinel-prune.service  forest-sentinel-prune.timer
src/forest_sentinel/: aoi.py  aoi_admin.py  candidates.py  change.py  cli.py  confidence.py  context.py  db.py  dispatch.py  earthengine.py  events.py  forestmask.py  hls.py  indices.py  localextract.py  methodology.py  models.py  pipeline.py  radar.py  reproduce.py  retention.py  runlog.py  sentinel1.py  settings.py  storage.py  trajectory.py
src/forest_sentinel/dashboard/: __init__.py  app.py
src/forest_sentinel/dashboard/static/: index.html
tests/: conftest.py  fakes.py  test_aoi.py  test_app_image_sh.py  test_candidates.py  test_change.py  test_cli.py  test_confidence.py  test_context.py  test_dashboard.py  test_dispatch.py  test_earthengine.py  test_event_models.py  test_events.py  test_forestmask.py  test_hls.py  test_indices.py  test_localextract.py  test_manual_review.py  test_methodology.py  test_migrations.py  test_pipeline.py  test_prune_cogs_sh.py  test_radar.py  test_reproduce.py  test_retention.py  test_run_pipeline_sh.py  test_sentinel1.py  test_settings.py  test_storage.py  test_trajectory.py
