[project]
name = "open-forest-sentinel"
version = "0.0.0"
description = "Generalized, low-cost forest disturbance monitoring and evidence system for a configurable Area of Interest."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forest_sentinel"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "mypy>=1.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true
