[project]
name = "open-forest-sentinel"
version = "0.0.0"
description = "Generalized, low-cost forest disturbance monitoring and evidence system for a configurable Area of Interest."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "shapely>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forest_sentinel"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "mypy>=1.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["geoalchemy2.*", "shapely.*"]
ignore_missing_imports = true
