[project]
name = "open-forest-sentinel"
version = "0.0.0"
description = "Generalized, low-cost forest disturbance monitoring and evidence system for a configurable Area of Interest."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "shapely>=2.0",
    "earthengine-api>=1.1",
    "google-cloud-storage>=2.16",
]

[project.scripts]
forest-sentinel = "forest_sentinel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forest_sentinel"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.9",
    "mypy>=1.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=forest_sentinel --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["geoalchemy2.*", "shapely.*", "ee.*", "google.cloud.*"]
ignore_missing_imports = true
